# test_gerchikov_quiz

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  settings.py
gerchikov/: filters.py  handlers.py  markups.py  router.py  schemas.py  states.py  texts.py
main/: app.py  bot.py  db.py
mbriggs/: helpers.py  markups.py  router.py  states.py
