[tool.poetry]
name = "gerchikov-bot"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Molotkov <tykvagdety13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
db = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
